pregunta al generar pdf si desea abrirlo. modifico boleta por factura en la plantilla. agrego calcular datos en mis ventas

--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
@@ -50,7 +50,7 @@
 
     <table border="0" style="width:100%">
         <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Documento Cliente:</label></td>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">DNI Cliente:</label></td>
 			<td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
         </tr>
 		<tr>
@@ -62,7 +62,7 @@
             <td style="width:20%"><label style="font-size:12px;">@fecharegistro</label></td>
         </tr>
         <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Vendedor Registro:</label></td>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Vendedor:</label></td>
             <td style="width:20%"><label style="font-size:12px;">@vendedorregistro</label></td>
         </tr>
 
@@ -85,7 +85,7 @@
     </table>
 
     <div style="height:15px !important"></div>
-    <table style="width:35%;font-size:12px;" class="border">
+    <table style="width:35%;font-size:12px;" class="border" align="right">
         <thead>
             <tr style="background-color:#CACACA">
                 <th>Monto Total</th>
