modifico plantilla y agrego una venta a la base de datos, faltan mas ventas

--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Page Design</title>
+    <title>Factura Electro Market</title>
     <style>
         table.border {
             border-collapse: collapse;
@@ -51,19 +51,23 @@
     <table border="0" style="width:100%">
         <tr>
             <td style="width:20%"><label style="font-size:12px;font-weight:bold">DNI Cliente:</label></td>
-			<td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
+            <td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
         </tr>
-		<tr>
-			<td style="width:20%"><label style="font-size:12px;font-weight:bold">Nombre Cliente:</label></td>
-			<td style="width:20%"><label style="font-size:12px;">@nombrecliente</label></td>
-		</tr>
-		<tr>
-			<td style="width:20%"><label style="font-size:12px;font-weight:bold">Fecha Registro:</label></td>
+        <tr>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Nombre Cliente:</label></td>
+            <td style="width:20%"><label style="font-size:12px;">@nombrecliente</label></td>
+        </tr>
+        <tr>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Fecha Registro:</label></td>
             <td style="width:20%"><label style="font-size:12px;">@fecharegistro</label></td>
         </tr>
         <tr>
             <td style="width:20%"><label style="font-size:12px;font-weight:bold">Vendedor:</label></td>
             <td style="width:20%"><label style="font-size:12px;">@vendedorregistro</label></td>
+        </tr>
+        <tr>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Forma de pago:</label></td>
+            <td style="width:20%"><label style="font-size:12px;">@formapago</label></td>
         </tr>
 
 
