--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaPresupuesto.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaPresupuesto.html
@@ -26,8 +26,6 @@
 
             <td style="width:15%" valign="top"></td>
             <td style="width:60%" valign="top" align="center">
-
-
             </td>
             <td style="width:25%;" align="right" valign="top">
                 <table style="width:100%" class="border">
@@ -45,6 +43,17 @@
             </td>
         </tr>
     </table>
+    <div style="height:15px !important"></div>
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">@tiposociedad</label>
+    </div>
+
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">Tel: @telnegocio</label>
+    </div>
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">Direccion: @direcnegocio</label>
+    </div>
     <div style="height:15px !important"></div>
     <hr />
 
