--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Factura Electro Market</title>
+    <title>Web Page Design</title>
     <style>
         table.border {
             border-collapse: collapse;
@@ -28,6 +28,7 @@
             <td style="width:60%" valign="top" align="center">
 
 
+
             </td>
             <td style="width:25%;" align="right" valign="top">
                 <table style="width:100%" class="border">
@@ -46,28 +47,35 @@
         </tr>
     </table>
     <div style="height:15px !important"></div>
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">@tiposociedad</label>
+    </div>
+
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">Tel: @telnegocio</label>
+    </div>
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">Direccion: @direcnegocio</label>
+    </div>    
+    <div style="height:15px !important"></div>
     <hr />
 
     <table border="0" style="width:100%">
         <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">DNI Cliente:</label></td>
-            <td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Documento Cliente:</label></td>
+			<td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
         </tr>
-        <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Nombre Cliente:</label></td>
-            <td style="width:20%"><label style="font-size:12px;">@nombrecliente</label></td>
-        </tr>
-        <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Fecha Registro:</label></td>
+		<tr>
+			<td style="width:20%"><label style="font-size:12px;font-weight:bold">Nombre Cliente:</label></td>
+			<td style="width:20%"><label style="font-size:12px;">@nombrecliente</label></td>
+		</tr>
+		<tr>
+			<td style="width:20%"><label style="font-size:12px;font-weight:bold">Fecha Registro:</label></td>
             <td style="width:20%"><label style="font-size:12px;">@fecharegistro</label></td>
         </tr>
         <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Vendedor:</label></td>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Vendedor Registro:</label></td>
             <td style="width:20%"><label style="font-size:12px;">@vendedorregistro</label></td>
-        </tr>
-        <tr>
-            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Forma de pago:</label></td>
-            <td style="width:20%"><label style="font-size:12px;">@formapago</label></td>
         </tr>
 
 
@@ -89,7 +97,7 @@
     </table>
 
     <div style="height:15px !important"></div>
-    <table style="width:35%;font-size:12px;" class="border" align="right">
+    <table style="width:35%;font-size:12px;" class="border">
         <thead>
             <tr style="background-color:#CACACA">
                 <th>Monto Total</th>
