--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaPresupuesto.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaPresupuesto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Factura Electro Market</title>
+    <title>Presupuesto Electro Market</title>
     <style>
         table.border {
             border-collapse: collapse;
@@ -47,12 +47,14 @@
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <label style="font-size:11px;font-weight:bold;">@tiposociedad</label>
     </div>
-
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <label style="font-size:11px;font-weight:bold;">Tel: @telnegocio</label>
+        <label style="font-size:11px;font-weight:bold;">CUIL:</label> <label style="font-size:11px;">20-32356323-3</label>
     </div>
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <label style="font-size:11px;font-weight:bold;">Direccion: @direcnegocio</label>
+        <label style="font-size:11px;font-weight:bold;">Tel:</label><label style="font-size:11px;font-weight:bold;"> @telnegocio</label>
+</div>
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">Direccion:</label><label style="font-size:11px;"> @direcnegocio</label>
     </div>
     <div style="height:15px !important"></div>
     <hr />
