--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Page Design</title>
+    <title>Factura ElectroMarket</title>
     <style>
         table.border {
             border-collapse: collapse;
@@ -26,9 +26,6 @@
 
             <td style="width:15%" valign="top"></td>
             <td style="width:60%" valign="top" align="center">
-
-
-
             </td>
             <td style="width:25%;" align="right" valign="top">
                 <table style="width:100%" class="border">
@@ -50,27 +47,29 @@
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <label style="font-size:11px;font-weight:bold;">@tiposociedad</label>
     </div>
-
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <label style="font-size:11px;font-weight:bold;">Tel: @telnegocio</label>
+        <label style="font-size:11px;font-weight:bold;">CUIL:</label> <label style="font-size:11px;">20-32356323-3</label>
     </div>
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <label style="font-size:11px;font-weight:bold;">Direccion: @direcnegocio</label>
-    </div>    
+        <label style="font-size:11px;font-weight:bold;">Tel:</label><label style="font-size:11px;"> @telnegocio</label>
+    </div>
+    <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <label style="font-size:11px;font-weight:bold;">Direccion:</label><label style="font-size:11px;"> @direcnegocio</label>
+    </div>
     <div style="height:15px !important"></div>
     <hr />
 
     <table border="0" style="width:100%">
         <tr>
             <td style="width:20%"><label style="font-size:12px;font-weight:bold">Documento Cliente:</label></td>
-			<td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
+            <td style="width:20%"><label style="font-size:12px;">@doccliente</label></td>
         </tr>
-		<tr>
-			<td style="width:20%"><label style="font-size:12px;font-weight:bold">Nombre Cliente:</label></td>
-			<td style="width:20%"><label style="font-size:12px;">@nombrecliente</label></td>
-		</tr>
-		<tr>
-			<td style="width:20%"><label style="font-size:12px;font-weight:bold">Fecha Registro:</label></td>
+        <tr>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Nombre Cliente:</label></td>
+            <td style="width:20%"><label style="font-size:12px;">@nombrecliente</label></td>
+        </tr>
+        <tr>
+            <td style="width:20%"><label style="font-size:12px;font-weight:bold">Fecha Registro:</label></td>
             <td style="width:20%"><label style="font-size:12px;">@fecharegistro</label></td>
         </tr>
         <tr>
