--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaPresupuesto.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaPresupuesto.html
@@ -51,7 +51,7 @@
         <label style="font-size:11px;font-weight:bold;">CUIL:</label> <label style="font-size:11px;">20-32356323-3</label>
     </div>
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <label style="font-size:11px;font-weight:bold;">Tel:</label><label style="font-size:11px;font-weight:bold;"> @telnegocio</label>
+        <label style="font-size:11px;font-weight:bold;">Tel:</label><label style="font-size:11px;"> @telnegocio</label>
 </div>
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <label style="font-size:11px;font-weight:bold;">Direccion:</label><label style="font-size:11px;"> @direcnegocio</label>
