arreglo desde el codigo para sacar montopago y montocambio q se comunicaba con la bd

--- a/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
+++ b/ElectroMarket/CapaPresentacion/Resources/PlantillaVenta.html
@@ -96,19 +96,15 @@
     </table>
 
     <div style="height:15px !important"></div>
-    <table style="width:35%;font-size:12px;" class="border">
+    <table style="width:35%;font-size:12px;" class="border"  align="right">
         <thead>
             <tr style="background-color:#CACACA">
                 <th>Monto Total</th>
-                <th>Pago Con</th>
-                <th>Cambio</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>@montototal</td>
-                <td>@pagocon</td>
-                <td>@cambio</td>
             </tr>
         </tbody>
     </table>
